--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #232931;
-    font-family: cursive;
+    font-family: 'Noto Sans', sans-serif;
     color: white;
 }
 
